--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "normalize.css": "^7.0.0",
     "qs": "^6.4.0",
     "vue": "^2.2.1",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-property-decorator": "^5.0.1",
     "vue-router": "^2.3.0",
     "vue-svgicon": "^1.1.4",
