--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-router": "^2.3.0",
     "vue-svgicon": "^1.1.4",
     "vuex": "^2.2.1",
-    "vuex-class": "^0.2.0"
+    "vuex-class": "^0.2.0",
+    "weixin-js-sdk": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
