--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "clipboard": "^2.0.1",
     "normalize.css": "^7.0.0",
     "qs": "^6.4.0",
     "vue": "^2.2.1",
