--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vue-property-decorator": "^5.0.1",
     "vue-router": "^2.3.0",
     "vue-svgicon": "^1.1.4",
+    "vue2-animate": "^2.0.0",
     "vuex": "^2.2.1",
     "vuex-class": "^0.2.0",
     "weixin-js-sdk": "^1.3.2"
